--- a/pom.xml
+++ b/pom.xml
@@ -47,11 +47,11 @@
 			<artifactId>tomcat-embed-jasper</artifactId>
 			<scope>provided</scope>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>mysql</groupId>-->
-<!--			<artifactId>mysql-connector-java</artifactId>-->
-<!--			<scope>runtime</scope>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -152,14 +152,14 @@
 		    <artifactId>commons-lang3</artifactId>
 		    <version>3.14.0</version>
 		</dependency>
-		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-data-mongodb</artifactId>
-		</dependency>
-		<dependency>
-    		<groupId>org.mongodb</groupId>
-	    	<artifactId>mongodb-driver-sync</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--		    <groupId>org.springframework.boot</groupId>-->
+<!--		    <artifactId>spring-boot-starter-data-mongodb</artifactId>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--    		<groupId>org.mongodb</groupId>-->
+<!--	    	<artifactId>mongodb-driver-sync</artifactId>-->
+<!--		</dependency>-->
 		
 		<dependency>
 		    <groupId>org.apache.poi</groupId>
