--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 
 
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/translator
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/translator
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto = update
@@ -15,8 +15,8 @@
 #spring.datasource.password=Martinserver747
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.defer-datasource-initialization=true
 
 #db1.jpa.generate-ddl=true
@@ -28,7 +28,7 @@
 
 #spring.jpa.hibernate.ddl-auto=true
 
-spring.data.mongodb.uri=mongodb://localhost:27017/mongoDb_Test
+#spring.data.mongodb.uri=mongodb://localhost:27017/mongoDb_Test
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=mongoDb_Test
@@ -39,9 +39,9 @@ logging.level.root=info
 spring.mvc.view.prefix=/webpages/
 spring.mvc.view.suffix=.jsp
 
-#spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.connection-test-query=SELECT 1
 
-#spring.main.allow-circular-references=true
+spring.main.allow-circular-references=true
 
 #1 hour
 #spring.datasource.hikari.connection-timeout=60000
@@ -56,5 +56,5 @@ spring.servlet.multipart.max-request-size=102400KB
 #session timeout for 30 minutes
 server.servlet.session.timeout = 1800
 
-spring.jpa.open-in-view=true
+#spring.jpa.open-in-view=true
 
