--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,17 @@
 	    </dependency>
 
 
+    <dependency>
+        <groupId>com.squareup.okhttp3</groupId>
+        <artifactId>okhttp</artifactId>
+        <version>4.9.3</version>
+    </dependency>
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.8</version>
+    </dependency>
+
 	</dependencies>
 	<repositories>
 	    <repository>
@@ -190,6 +201,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>translator-docker.jar</finalName>
 	</build>
 	
 
